samples/_failures_safe/1761190457_b40047_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e039d970.c: In function ‘main’:
./samples/SAFE/__tmp_e039d970.c:157:43: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  157 |     size_t compressed_size = compress_rle(input
      |                                           ^~~~~
      |                                           int
./samples/SAFE/__tmp_e039d970.c:157:43: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e039d970.c:157:48: error: expected ‘)’ at end of input
  157 |     size_t compressed_size = compress_rle(input
      |                                          ~     ^
      |                                                )
./samples/SAFE/__tmp_e039d970.c:157:30: error: too few arguments to function ‘compress_rle’
  157 |     size_t compressed_size = compress_rle(input
      |                              ^~~~~~~~~~~~
./samples/SAFE/__tmp_e039d970.c:69:8: note: declared here
   69 | size_t compress_rle(const unsigned char *input, size_t input_len, unsigned char *output, size_t output_capacity) {
      |        ^~~~~~~~~~~~
./samples/SAFE/__tmp_e039d970.c:157:5: error: expected declaration or statement at end of input
  157 |     size_t compressed_size = compress_rle(input
      |     ^~~~~~
